--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,9 @@ dependencies {
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+	
+	// sourceCompatibility = 1.8
+	// targetCompatibility = 1.8
 }
 
 processResources
