--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
-/.classpath
-/.project
-/.gradle
-/.settings
-/run
-/bin
-/gradle
-/build/
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
