--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ plugins {
 }
 */
 version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group= "de.saar.philippi" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "tpmc"
 
 minecraft {
     version = "1.10.2-12.18.1.2044"
